# elcorecllib

./: Makefile  README.md
src/: CMakeLists.txt
src/elcore/: CMakeLists.txt  job-wrapper.cc  libelcore.h  syscall.cc
src/elcore-runtime/: CMakeLists.txt  dma.cc  main.cc
src/elcore-runtime/include/: dma.h  syscall-runtime.h
src/elcore-runtime/sys/: _exit.c  chdir.c  chown.c  errno.c  execve.c  fork.c  fstat.c  getpid.c  kill.c  link.c  open.c  read.c  readlink.c  stat.c  symlink.c  syscall-impl.c  unlink.c  wait.c
src/elcorecl/: CMakeLists.txt  Config.cmake.in  ElcoreProject.cmake  command-queue.cc  context.cc  device.cc  elcore-cl.h  enqueued-commands.cc  event-object.cc  kernel-object.cc  memory-object.cc  object.cc  platform.cc  program-object.cc
src/include/elcorecl/: ecl.h  ecl_d3d10.h  ecl_d3d11.h  ecl_dx9_media_sharing.h  ecl_dx9_media_sharing_intel.h  ecl_egl.h  ecl_ext.h  ecl_ext_intel.h  ecl_gl.h  ecl_gl_ext.h  ecl_platform.h  ecl_va_api_media_sharing_intel.h  ecl_version.h  elcorecl.h
src/include/elfio/: elf_types.hpp  elfio_dump.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_strings.hpp
src/risc1/: CMakeLists.txt  job-wrapper.cc  librisc1.h  syscall.cc  syscall.h
